# anthy

./: meson.build  meson_dist.py
.github/workflows/: ci.yml
calctrans/: calctrans.c
depgraph/: mkdepgraph.c
mkanthydic/: mkfiledic.c
mkworddic/: mkdic.c
src-diclib/: diclib_inner.h  file_dic.c  filemap.c  meson.build
src-main/: meson.build
src-ordering/: meson.build
src-splitter/: meson.build
src-util/: meson.build
src-win32/: .clang-format  fcntl.h  pwd.h  unistd.h
src-win32/arpa/: inet.h
src-win32/netinet/: in.h
src-win32/sys/: mman.h  time.h
src-worddic/: meson.build
test/: cli.c  meson.build
